--- a/styles/article.scss
+++ b/styles/article.scss
@@ -1,16 +1,22 @@
+html,
+body {
+  max-width: 750px;
+  margin: auto;
+}
 .article {
-  text-align: center;
+  text-align: left;
 }
 
 .article {
   line-height: 2;
+  img {
+    width: 100%;
+    max-width: 100%;
+  }
 }
 h1 {
   text-align: center;
   font-size: 24px;
   font-weight: bold;
   color: #333333;
-}
-img {
-  width: 100px !important;
 }
